--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,15 +2,73 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "jsx": "react-native",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
+      ],
+      "@/components/*": [
+        "./src/components/*"
+      ],
+      "@/hooks/*": [
+        "./src/hooks/*"
+      ],
+      "@/constants/*": [
+        "./src/constants/*"
+      ],
+      "@/utils/*": [
+        "./src/utils/*"
+      ],
+      "@/screens/*": [
+        "./src/screens/*"
+      ],
+      "@/store/*": [
+        "./src/store/*"
+      ],
+      "@/assets/*": [
+        "./src/assets/*"
+      ],
+      "@/styles/*": [
+        "./src/styles/*"
+      ],
+      "components/*": [
+        "./src/components/*"
+      ],
+      "hooks/*": [
+        "./src/hooks/*"
+      ],
+      "constants/*": [
+        "./src/constants/*"
+      ],
+      "utils/*": [
+        "./src/utils/*"
+      ],
+      "screens/*": [
+        "./src/screens/*"
+      ],
+      "store/*": [
+        "./src/store/*"
+      ],
+      "assets/*": [
+        "./src/assets/*"
+      ],
+      "styles/*": [
+        "./src/styles/*"
       ]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
   ]
