--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@shopify/react-native-skia": "^2.4.2",
     "@supabase/supabase-js": "^2.80.0",
     "@tamagui/core": "^1.136.1",
     "@tamagui/font-inter": "^1.136.1",
@@ -40,7 +41,6 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -52,6 +52,7 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tamagui": "^1.136.1",
+    "victory-native": "^36.9.2",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
