--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "expo-linking": "~8.0.8",
     "expo-navigation-bar": "~5.0.9",
     "expo-router": "~6.0.14",
+    "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -50,6 +51,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tamagui": "^1.136.1",
