--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "dependencies": {
-    "@supabase/supabase-js": "^2.80.0"
+    "@supabase/supabase-js": "^2.80.0",
+    "expo": "^54.0.25",
+    "react": "^19.1.0",
+    "react-native": "^0.81.5"
   },
   "devDependencies": {
     "@supabase/mcp-server-supabase": "^0.5.9"
+  },
+  "name": "Hercules",
+  "version": "1.0.0",
+  "scripts": {
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   }
 }
