feat: add comprehensive analytics suite with premium features
- Add new analytics tabs: distribution-analytics, volume-analytics, muscle-detail
- Implement premium lock system with usePremiumStatus hook
- Add 15+ new chart components (drill-down pie, fractal bubble, tiered charts, etc.)
- Create AccordionRow atom for expandable UI elements
- Add PersonalRecordsSection with premium PR styling
- Update FocusDistributionChart with monochromatic orange palette
- Fix chart selection state isolation per page
- Add analytics data hooks and TypeScript types
- Update exercise hierarchy and data structures
- Refactor screen layouts and navigation for analytics
- Add premium lock components and time range selectors

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -7,7 +7,7 @@
     "icon": "./herc_app_icon.png",
     "scheme": "frontend",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
     },
