feat: comprehensive app refactoring and cleanup
- Remove unused demo components and assets
- Add new components: HorizontalAccentBar, haptics utils, userProfileStore
- Refactor authentication flow and layout structure
- Update exercise selection and plan components
- Clean up imports and remove deprecated files
- Add TypeScript configuration and Expo setup

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react-native": "^0.81.5"
   },
   "devDependencies": {
-    "@supabase/mcp-server-supabase": "^0.5.9"
+    "@supabase/mcp-server-supabase": "^0.5.9",
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   },
   "name": "Hercules",
   "version": "1.0.0",
