--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,29 +18,29 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@shopify/react-native-skia": "^2.4.2",
+    "@shopify/react-native-skia": "2.2.12",
     "@supabase/supabase-js": "^2.80.0",
     "@tamagui/core": "^1.136.1",
     "@tamagui/font-inter": "^1.136.1",
     "@tamagui/react-native-web": "^1.136.1",
-    "expo": "~54.0.22",
-    "expo-blur": "^15.0.7",
-    "expo-build-properties": "~1.0.9",
+    "expo": "~54.0.27",
+    "expo-blur": "~15.0.8",
+    "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-navigation-bar": "~5.0.9",
-    "expo-router": "~6.0.14",
-    "expo-secure-store": "^15.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.8",
-    "expo-updates": "~29.0.12",
-    "expo-web-browser": "~15.0.9",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-navigation-bar": "~5.0.10",
+    "expo-router": "~6.0.17",
+    "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.14",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -63,7 +63,6 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
