feat: implement comprehensive theme system with dark mode support
- Add complete light/dark theme system with dynamic switching
- Implement theme preference store with system/light/dark options
- Create useTheme hook for consistent theme access across components
- Update all UI components to use theme-based colors and styling
- Add Appearance modal for theme selection in profile settings
- Implement notification system with configurable preferences
- Add units modal for weight/unit preferences
- Update exercise database with new entries
- Fix various UI consistency issues and improve component styling
- Ensure proper TypeScript typing throughout theme implementation

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -9,7 +9,11 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ocreynolds.hercules",
+      "infoPlist": {
+        "UIBackgroundModes": ["fetch", "remote-notification"]
+      }
     },
     "android": {
       "edgeToEdgeEnabled": true,
@@ -24,6 +28,15 @@
     },
     "plugins": [
       "expo-router",
+      [
+        "expo-notifications",
+        {
+          "icon": "./src/assets/images/android-icon-monochrome.png",
+          "color": "#FF6B4A",
+          "defaultChannel": "workout-reminders",
+          "sounds": []
+        }
+      ],
       [
         "expo-build-properties",
         {
