--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.10",
     "expo-navigation-bar": "~5.0.10",
+    "expo-notifications": "^0.32.14",
     "expo-router": "~6.0.17",
     "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.12",
