--- a/frontend/app.json
+++ b/frontend/app.json
@@ -19,8 +19,7 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "softwareKeyboardLayoutMode": "resize",
-      "package": "com.ocreynolds.hercules",
-      "versionCode": 1
+      "package": "com.ocreynolds.hercules"
     },
     "web": {
       "output": "static",
