--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.80.0",
     "expo": "^54.0.25",
+    "expo-location": "^19.0.8",
+    "expo-task-manager": "^14.0.9",
     "react": "^19.1.0",
     "react-native": "^0.81.5"
   },
