feat: add timer functionality and navigation improvements
- Add TimePickerModal component for rest timer configuration
- Add useTimer hook for workout session timing
- Add navigationStore for global navigation state management
- Update WorkoutExerciseSummaryCard with timer integration
- Configure EAS build settings for deployment

--- a/app.json
+++ b/app.json
@@ -1,5 +1,10 @@
 {
   "android": {
     "package": "com.ocreynolds.hercules"
+  },
+  "extra": {
+    "eas": {
+      "projectId": "10150adc-aaba-4613-a541-ee8e56a25a5f"
+    }
   }
 }
