feat(hercules-ai): implement comprehensive action proposal system with enhanced UI and backend
- Add ActionApprovalCard component for reviewing AI-generated actions
- Implement action validation and execution pipeline
- Add markdown rendering and message sanitization utilities
- Enhance chat UI with typing indicators and usage banner
- Add comprehensive action creation tools (workout templates, program plans)
- Update backend with structured action responses and validation
- Add testing guide and documentation for new features
- Improve exercise search and workout editor hooks
- Add formatters for consistent data presentation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@supabase/supabase-js": "^2.80.0",
+    "dotenv": "^17.2.3",
     "expo": "^54.0.25",
     "expo-location": "^19.0.8",
     "expo-task-manager": "^14.0.9",
