--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -1,6 +1,6 @@
 {
   "imports": {
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.80.0"
+    "@supabase/supabase-js": "npm:@supabase/supabase-js@2.80.0"
   },
   "compilerOptions": {
     "lib": ["deno.ns", "dom"],
