feat: Add outdoor exercise type + improve exercise creation flow
- Add 'Outdoor' option to CreateExerciseModal (maps to cardio + supportsGpsTracking)
- Add supports_gps_tracking column to custom_exercises table with migration
- Update custom exercise store, queries, and catalog creation to handle GPS tracking
- Make outdoor exercise picker dynamic (includes custom outdoor exercises)
- Add 'Create a new workout' link in workout selection  navigate to Programs tab
- Add 'Create a new outdoor exercise' inline input in outdoor picker
- Fix Create Exercise button visibility in modals (add bottom spacing)
- Fix keyboard covering outdoor exercise name input (dynamic scroll padding)
- Remove 'Custom' tag from custom outdoor exercises in picker
- Fix alignment of 3 metric numbers in outdoor session UI
- Add outdoor session components (OutdoorMetricsBar, OutdoorControlBar, outdoor-session.tsx)
- Add outdoor tracking service and store
- Add GPS tracking utilities and types

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -13,14 +13,21 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.ocreynolds.hercules",
       "infoPlist": {
-        "UIBackgroundModes": ["fetch", "remote-notification"]
+        "UIBackgroundModes": ["fetch", "remote-notification", "location"],
+        "NSLocationWhenInUseUsageDescription": "Hercules uses your location to track your outdoor exercise route, distance, and pace.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "Hercules uses your location in the background to continue tracking your outdoor exercise route."
       }
     },
     "android": {
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "softwareKeyboardLayoutMode": "resize",
-      "package": "com.ocreynolds.hercules"
+      "package": "com.ocreynolds.hercules",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyBfoPqdk3GoFzs4LFBQhHsx8QzaKN_4ZX4"
+        }
+      }
     },
     "web": {
       "output": "static",
@@ -29,6 +36,13 @@
     "plugins": [
       "expo-router",
       "expo-sqlite",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Hercules uses your location to track your outdoor exercise route, distance, and pace.",
+          "locationWhenInUsePermission": "Hercules uses your location to track your outdoor exercise route, distance, and pace."
+        }
+      ],
       [
         "expo-notifications",
         {
