--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,11 @@
     "@tamagui/font-inter": "^1.136.1",
     "@tamagui/react-native-web": "^1.136.1",
     "expo": "~54.0.27",
+    "expo-apple-authentication": "~8.0.8",
     "expo-blur": "~15.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.8",
